# recipe-api

./: .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: django.yml
postgres_data/: postmaster.pid
postgres_data/base/13510/: 13366
postgres_data/base/13511/: 1259  2619  2696  pg_internal.init
postgres_data/base/16384/: 1247  1249  1259  1259_vm  16385  16387  16392  16393  16395  16397  16400  16402  16404  16406  16409  16411  16416  16418  16420  16425  16427  16434  16435  16436  16449  16453  16455  16460  16461  16463  16465  16470  16472  16477  16479  16480  16492  16493  16494  16506  (+69 more)
postgres_data/global/: 1260  1262  1262_vm  2396  2671  2672  2676  pg_control  pg_internal.init
postgres_data/pg_stat/: db_0.stat  db_13511.stat  db_16384.stat  global.stat
postgres_data/pg_stat_tmp/: db_0.stat  db_13511.stat  db_16384.stat  global.stat
postgres_data/pg_subtrans/: 0000
postgres_data/pg_xact/: 0000
src/: .flake8
src/apps/core/: admin.py  models.py
src/apps/recipe/: serializers.py  views.py
src/apps/user/: serializers.py  urls.py  views.py
src/config/: settings.py  urls.py
src/postgres_data/: postmaster.pid
src/postgres_data/global/: 1262  2671  2672  pg_control  pg_internal.init
src/postgres_data/pg_stat/: db_0.stat  db_13511.stat  db_16384.stat  global.stat
src/postgres_data/pg_stat_tmp/: db_0.stat  db_13511.stat  db_16384.stat  global.stat
src/postgres_data/pg_subtrans/: 0000
src/postgres_data/pg_xact/: 0000
src/tests/core/: test_models.py
(+115 files in other folders)
