[tool.poetry]
name = "recipe-api"
version = "0.1.0"
description = ""
authors = ["sonya <sonyakarm@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
django = "^5.1.5"
flake8 = "^7.1.1"
pytest = "^8.3.4"
psycopg2-binary = "^2.9.10"
markdown = "^3.7"
django-filter = "^24.3"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
